--- a/static/css/scss/_hero.scss
+++ b/static/css/scss/_hero.scss
@@ -3,12 +3,14 @@
     background-color: $mainBlue;
 
     h1 {
+
         padding: 2rem 1rem 2rem 1rem;
         text-align: center;
         font-weight: 500;
     }
 
     h2 {
+
         text-align: center;
         font-size: 2rem;
         line-height: 2.5rem;
@@ -18,12 +20,14 @@
     
 
     &__icon {
+
         color: $mainPink;
         display: block;
         margin: 0 auto;
     }
 
     &__btn {
+
         background-color: $mainPink;
         color: white;
         font-size: 16px;
@@ -41,12 +45,14 @@
 }
 
 h5 {
+    
         text-align: center;
         line-height: 2rem;
         padding: 0 1rem 1rem 1rem;
     }
 
 .material-icons-hero {
+
     color: $mainPink;
     display: block;
     margin: 2rem auto;
@@ -55,10 +61,12 @@ h5 {
 }
 
 .hero-ideas {
+
     background-color: $mainBlue;
     padding-bottom: 1rem;
 
     &__heading {
+
         font-weight: 600;
         text-align: center;
         padding-top: 1rem;
@@ -66,23 +74,33 @@ h5 {
     }
 
     &__grid {
+
         display: grid;
     }
 
     .card {
+
         width: 90%;
         margin: 0 auto;
         color: black;
 
         @include tablet {
+
             width: 35%;
+
+            .card-image {
+                height: 380px;
+            }
+            
         }
 
         @include laptop {
+
             width: 25%;
         }
 
         .card-title {
+
             font-weight: 600;
             color: black;
             text-align: center;
@@ -93,17 +111,20 @@ h5 {
     }
 
     &__cta-bar {
+
         background-color: $mainBlue;
         box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 3px 1px -2px rgba(0,0,0,0.12), 0 1px 5px 0 rgba(0,0,0,0.2);
         padding-bottom: 1rem;
     
         &--text {
+
             text-align: center;  
             padding: 1rem;
             margin-top: 0;    
         }
     
         &--btn {
+
             display: block;
             margin: 0 auto;
             width: 100px;
