--- a/static/css/scss/_search_results.scss
+++ b/static/css/scss/_search_results.scss
@@ -1,3 +1,16 @@
+
+.container-search {
+    width: 90%;
+    margin-top: 2rem;
+    margin: 0 auto;
+
+    @include laptop {
+        max-width: 1280px;
+        width: 90%;
+
+    }
+}
+
 .search-results {
     text-align: center;
     margin: 1rem 0 0 0;
