--- a/static/css/scss/_idea_details.scss
+++ b/static/css/scss/_idea_details.scss
@@ -1,8 +1,27 @@
+.container-idea-details {
+    
+    margin-top: 2rem;
+    margin: 0 auto;
+    max-width: 1280px;
+    width: 90%;
+
+    @include laptop {
+        
+        width: 40%;
+
+    }
+    
+}
+
 .idea-details {
 
     h1 {
-        font-size: 3rem;
+        font-size: 2.5rem;
         margin: 1rem 0 2rem 0;
+
+        @include tablet {
+            font-size: 3rem;
+        }
     }
     
     &__edit-idea {
