--- a/templates/pages/ideas/idea_details.html
+++ b/templates/pages/ideas/idea_details.html
@@ -7,7 +7,7 @@
 
 
 {% block content %}
-<div class="container">
+<div class="container-idea-details">
     <div class="secundary-nav">
         <p class="secundary-nav__text"><a href="{{url_for('ideas')}}">Ideas</a> > Idea details</p>
     </div>
