--- a/templates/pages/ideas/idea_details.html
+++ b/templates/pages/ideas/idea_details.html
@@ -177,7 +177,8 @@
         <div id="modal2" class="modal">
             <div class="modal-content">
                 <h4>Delete idea</h4>
-                <p>This will delete your idea permanently. Are you sure?</p>
+                <p>This will delete your idea <span class="bold">permanently</span>.</p>
+                <p>Are you sure?</p>
                 <div class="modal-footer">
                     <a href="{{url_for('delete_idea', idea_id=idea._id)}}" class="waves-effect waves-light btn">delete
                         idea</a>
