--- a/static/css/override.css
+++ b/static/css/override.css
@@ -783,6 +783,12 @@ h5 {
   box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.12), 0 1px 5px 0 rgba(0, 0, 0, 0.2);
   padding-bottom: 1rem;
 }
+@media (min-width: 768px) {
+  .hero-ideas__cta-bar {
+    box-shadow: none;
+    padding-bottom: 3rem;
+  }
+}
 .hero-ideas__cta-bar--text {
   text-align: center;
   padding: 1rem;
