--- a/static/css/scss/_hero.scss
+++ b/static/css/scss/_hero.scss
@@ -115,6 +115,11 @@ h5 {
         background-color: $mainBlue;
         box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 3px 1px -2px rgba(0,0,0,0.12), 0 1px 5px 0 rgba(0,0,0,0.2);
         padding-bottom: 1rem;
+
+        @include tablet {
+            box-shadow: none;
+            padding-bottom: 3rem;
+        }
     
         &--text {
 
