Test push from second machine.

--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -4,7 +4,7 @@
 {% endblock %}
 {% block hero %}
 <div class="hero-home">
-    <h1>Great Ideas?</h1>
+    <h1>Great Ideas??</h1>
     <i class="far fa-lightbulb fa-8x hero-home__icon"></i>
     <h2>Is it <span class="bold">really</span> a great idea? Your opinion matters.</h2>
 </div>
