Design large laptop done. Design tablet done.

--- a/static/css/scss/_base.scss
+++ b/static/css/scss/_base.scss
@@ -31,7 +31,10 @@ header {
 
 .my-grid-2 {
     display: grid;
-    grid-template-columns: 1fr;
+   
+    @include tablet {
+        grid-template-columns: 1fr 1fr;
+    }
 }
 
 
