--- a/static/css/override.css
+++ b/static/css/override.css
@@ -53,7 +53,11 @@ header {
 
 .my-grid-2 {
   display: grid;
-  grid-template-columns: 1fr;
+}
+@media (min-width: 768px) {
+  .my-grid-2 {
+    grid-template-columns: 1fr 1fr;
+  }
 }
 
 .divider {
@@ -260,6 +264,11 @@ textarea.materialize-textarea:focus:not([readonly]) {
     width: 40%;
   }
 }
+@media (min-width: 1200px) {
+  .container-idea-details {
+    width: 30%;
+  }
+}
 
 .idea-details h1 {
   font-size: 2.5rem;
@@ -418,6 +427,17 @@ textarea.materialize-textarea:focus:not([readonly]) {
   }
 }
 
+.container-admin {
+  margin: 0 auto;
+  max-width: 1125px;
+  width: 90%;
+}
+@media (min-width: 1200px) {
+  .container-admin {
+    width: 1125px;
+  }
+}
+
 .column-1__row, .column-2__row {
   display: grid;
   grid-template-columns: 70% 1fr 1fr;
@@ -437,7 +457,7 @@ textarea.materialize-textarea:focus:not([readonly]) {
 .column-1__row--btn-row-btn, .column-2__row--btn-row-btn {
   margin: 1rem 0 2rem 0;
   justify-self: center;
-  width: 50%;
+  width: 110px;
 }
 
 .overview {
@@ -452,7 +472,7 @@ textarea.materialize-textarea:focus:not([readonly]) {
 .btn-row-btn {
   margin: 1rem 0 2rem 0;
   justify-self: center;
-  width: 50%;
+  width: 110px;
 }
 .btn-row-link {
   grid-row: 2;
@@ -672,8 +692,13 @@ nav {
 
 .container-ideas {
   margin: 0 auto;
-  max-width: 1280px;
+  max-width: 1125px;
   width: 90%;
+}
+@media (min-width: 1200px) {
+  .container-ideas {
+    width: 1125px;
+  }
 }
 
 .my-grid {
@@ -767,7 +792,7 @@ h5 {
 }
 @media (min-width: 992px) {
   .hero-ideas .card {
-    width: 20%;
+    width: 330px;
   }
 }
 .hero-ideas .card .card-title {
@@ -850,6 +875,12 @@ h5 {
     width: 90%;
   }
 }
+@media (min-width: 1200px) {
+  .container-search {
+    max-width: 1280px;
+    width: 45%;
+  }
+}
 
 .search-results {
   text-align: center;
@@ -902,6 +933,10 @@ h5 {
 }
 #contact-form textarea {
   height: 150px;
+}
+#contact-form .btn {
+  width: 120px;
+  height: 2.4rem;
 }
 
 @media screen and (min-width: 1025px) {
