--- a/static/css/scss/_ideas.scss
+++ b/static/css/scss/_ideas.scss
@@ -1,7 +1,11 @@
 .container-ideas {
     margin: 0 auto;
-    max-width: 1280px;
-    width: 90%; 
+    max-width: 1125px;
+    width: 90%;
+
+    @include l_laptop {
+        width: 1125px;
+    }
 }
 
 .my-grid {
