--- a/static/css/scss/_nav.scss
+++ b/static/css/scss/_nav.scss
@@ -184,6 +184,10 @@ nav {
 .desktop-nav {
     display: none;
 
+    ul li {
+        color: $mainPink;
+    }
+
     ul li a {
         color: $mainPink;
     }
