--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -18,20 +18,23 @@
   {% endblock %}
 
   <!-- Google Tag Manager -->
-<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-  new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-  j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-  'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-  })(window,document,'script','dataLayer','GTM-W2GRB46');</script>
+  <script>(function (w, d, s, l, i) {
+      w[l] = w[l] || []; w[l].push({
+        'gtm.start':
+          new Date().getTime(), event: 'gtm.js'
+      }); var f = d.getElementsByTagName(s)[0],
+        j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
+          'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
+    })(window, document, 'script', 'dataLayer', 'GTM-W2GRB46');</script>
   <!-- End Google Tag Manager -->
 </head>
 
 <body>
   <!-- Google Tag Manager (noscript) -->
-  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-W2GRB46"
-  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-W2GRB46" height="0" width="0"
+      style="display:none;visibility:hidden"></iframe></noscript>
   <!-- End Google Tag Manager (noscript) -->
-  
+
   <header>
     {% block headerbutton %}
     {% endblock %}
@@ -40,13 +43,13 @@
   {% block hero %}
   {% endblock %}
   <!-- <div class="container container-desktop"> -->
-    {% block content %}
-    {% endblock %}
+  {% block content %}
+  {% endblock %}
   <!-- </div> -->
   <footer class="site-footer">
     {% include 'layouts/footer.html' %}
   </footer>
- 
+
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
@@ -58,9 +61,11 @@
       $('form:first *:input[type!=hidden]:first').focus();
       $(".dropdown-trigger").dropdown();
       $('.modal').modal();
+      $("select[required]").css({display: "block", height: 0, padding: 0, width: 0, position: 'absolute', left: 120});
       setTimeout(function() {
-        $('.alert-box').fadeOut('fast');
-    }, 3000);
+          $('.alert-box').fadeOut('fast');
+        }, 3000);
+
     });
   </script>
   <script type="text/javascript" src="/static/js/app.js"></script>
