--- a/templates/pages/ideas/add_idea.html
+++ b/templates/pages/ideas/add_idea.html
@@ -4,43 +4,43 @@
 <div class="container">
     <div class="add-idea">
         <h3>Add idea</h3>
-    
+
         <form action="{{ url_for('insert_idea') }}" method="POST" class="col s12" enctype="multipart/form-data">
-    
+
             <!-- Set idea name -->
             <div class="input-field">
-                <textarea id="textarea1" name="idea_title" class="materialize-textarea" data-length="50"
-                    maxlength="50"></textarea></textarea>
+                <textarea id="textarea1" name="idea_title" class="materialize-textarea" data-length="50" maxlength="50"
+                    required></textarea>
                 <label>Idea Name (max. 50 characters)</label>
             </div>
-    
+
             <!-- Set short description -->
             <div class="input-field">
                 <textarea name="idea_summary" id="textarea2" class="materialize-textarea" data-length="120"
-                    maxlength="120"></textarea>
+                    maxlength="120" required></textarea>
                 <label>Describe your idea in a short sentence (max. 130 characters)</label>
             </div>
-    
+
             <!-- Set details -->
             <div class="input-field">
                 <textarea name="idea_details" id="textarea3" class="materialize-textarea" data-length="1000"
-                    maxlength="1000"></textarea>
+                    maxlength="1000" required></textarea>
                 <label>Idea Details</label>
             </div>
-    
+
             <!-- Select image -->
             <div class="add-idea__add-image">
                 <div class="input-field">
                     <label>Select a picture from your own device</label>
-                    <input type="file" name="image" id="image">
+                    <input type="file" name="image" id="image" required>
                 </div>
             </div>
-            
-    
-    
+
+
+
             <!-- Set category -->
             <div class="input-field">
-                <select id="category" name="category_name">
+                <select id="category" name="category_name" required>
                     <option value="" disabled selected>Choose Category</option>
                     {% for category in categories %}
                     <option value="{{category.category_name}}">{{category.category_name}}</option>
@@ -48,11 +48,11 @@
                 </select>
                 <label>Select a category for your idea</label>
             </div>
-    
+
             <!-- Set tags -->
             <div class="input-field">
-                <select id="idea_tags1" name="idea_tag1">
-                    <option value="" disabled selected>Choose tag</option>
+                <select id="idea_tags1" name="idea_tag1" required>
+                    <option value="">Choose tag</option>
                     {% for tag in all_tags %}
                     <option value="{{tag.tag_name}}">{{tag.tag_name}}</option>
                     {% endfor %}
@@ -60,7 +60,7 @@
                 <label>Select a tag for your idea</label>
             </div>
             <div class="input-field">
-                <select id="idea_tags2" name="idea_tag2">
+                <select id="idea_tags2" name="idea_tag2" required>
                     <option value="" disabled selected>Choose tag</option>
                     {% for tag2 in all_tags_two %}
                     <option value="{{tag2.tag_name}}">{{tag2.tag_name}}</option>
@@ -69,7 +69,7 @@
                 <label>Select a tag for your idea</label>
             </div>
             <div class="input-field">
-                <select id="idea_tags3" name="idea_tag3">
+                <select id="idea_tags3" name="idea_tag3" required>
                     <option value="" disabled selected>Choose tag</option>
                     {% for tag3 in all_tags_three %}
                     <option value="{{tag3.tag_name}}">{{tag3.tag_name}}</option>
@@ -77,19 +77,19 @@
                 </select>
                 <label>Select a tag for your idea</label>
             </div>
-    
+
             <!-- Fixed username -->
             <div class="row">
                 <input type="hidden" name="username" id="idea_author" class="materialize-textarea"
                     value="{{session['username']}}">
             </div>
-    
+
             <!-- Fixed vote id -->
             <div class="row">
                 <input type="hidden" name="username" id="idea_author" class="materialize-textarea"
                     value="{{session['username']}}">
             </div>
-    
+
             <div class="add-idea__cta">
                 <button class="btn waves-effect waves-light" type="submit">
                     Add Idea
