--- a/templates/pages/ideas/edit_idea.html
+++ b/templates/pages/ideas/edit_idea.html
@@ -5,31 +5,31 @@
     <div class="edit-idea">
         <h3>Edit idea</h3>
         <form action="{{ url_for('update_idea', idea_id=idea._id) }}" method="POST">
-    
+
             <!-- Set idea name -->
             <div class="input-field">
-                <textarea id="textarea1" name="idea_title" class="materialize-textarea" data-length="50"
-                    maxlength="50">{{idea.idea_title}}</textarea>
+                <textarea id="textarea1" name="idea_title" class="materialize-textarea" data-length="50" maxlength="50"
+                    required>{{idea.idea_title}}</textarea>
                 <label>Idea Name (max. 50 characters)</label>
             </div>
-    
+
             <!-- Set short description -->
             <div class="input-field">
                 <textarea name="idea_summary" id="textarea2" class="materialize-textarea" data-length="120"
-                    maxlength="120">{{idea.idea_summary}}</textarea>
+                    maxlength="120" required>{{idea.idea_summary}}</textarea>
                 <label>Describe your idea in a short sentence (max. 130 characters)</label>
             </div>
-    
+
             <!-- Set details -->
             <div class="input-field">
                 <textarea name="idea_details" id="textarea3" class="materialize-textarea" data-length="1000"
-                    maxlength="1000">{{idea.idea_details}}</textarea>
+                    maxlength="1000" required>{{idea.idea_details}}</textarea>
                 <label>Idea Details</label>
             </div>
-    
+
             <!-- Set category -->
             <div class="input-field">
-                <select id="category" name="category_name">
+                <select id="category" name="category_name" required>
                     <option value="" disabled selected>Choose Category</option>
                     {% for cat in categories %}
                     {% if cat.category_name ==
@@ -41,10 +41,10 @@
                 </select>
                 <label>Select a category</label>
             </div>
-    
+
             <!-- Set tag -->
             <div class="input-field">
-                <select id="idea_tag1" name="idea_tag1">
+                <select id="idea_tag1" name="idea_tag1" required>
                     <option value="" disabled selected>Choose Tag</option>
                     {% for tag in all_tags %} {% if tag.tag_name ==
                 idea.idea_tag1%}
@@ -55,9 +55,9 @@
                 </select>
                 <label>Select a tag for your idea</label>
             </div>
-    
+
             <div class="input-field">
-                <select id="idea_tag2" name="idea_tag2">
+                <select id="idea_tag2" name="idea_tag2" required>
                     <option value="" disabled selected>Choose Tag</option>
                     {% for tag2 in all_tags_two %} {% if tag2.tag_name ==
                 idea.idea_tag2%}
@@ -68,9 +68,9 @@
                 </select>
                 <label>Select a tag for your idea</label>
             </div>
-    
+
             <div class="input-field">
-                <select id="idea_tags3" name="idea_tag3">
+                <select id="idea_tags3" name="idea_tag3" required>
                     <option value="" disabled selected>Choose Tag</option>
                     {% for tag3 in all_tags_three %} {% if tag3.tag_name ==
                         idea.idea_tag3%}
@@ -81,14 +81,15 @@
                 </select>
                 <label>Select a tag for your idea</label>
             </div>
-    
+
             <!-- Not editable, so invisible: fixed username -->
             <input type="hidden" name="username" id="idea_author" class="materialize-textarea"
                 value="{{session['username']}}">
-    
+
             <!-- Not editable, so invisible: fixed total votes -->
-            <input type="hidden" name="total_votes" id="total_votes" class="materialize-textarea" value="{{total_votes}}">
-    
+            <input type="hidden" name="total_votes" id="total_votes" class="materialize-textarea"
+                value="{{total_votes}}">
+
             <div class="edit-idea__cta">
                 <button class="btn waves-effect waves-light" type="submit" name="action">
                     Update Idea
